--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,7 +16,7 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 
 .scrollbar::-webkit-scrollbar
 {
-  width: 0px;
+  //width: 0px;
   //background-color: #00cfe8;
 }
 
